fix spacing errors

--- a/resources/style.css
+++ b/resources/style.css
@@ -14,6 +14,7 @@ h1 {
 h2 {
     font-weight: 300;
     font-size: 42px;
+    color:white;
 }
 
 h3 {
